<resources>

    <!-- General -->
    <string name="example_title">ExampleFragment</string>
    <string name="example_random_description">Press the button to generate a random number</string>
    <string name="example_randomize">Randomize</string>
    <string name="example_wolox">WOLOX</string>
    <string name="example_wolox_phone">0800 123 4567</string>
    <string name="example_message">The presenter generated the number %1$d and this view is displaying it</string>
    <string name="view_pager_title">Username: %1$s\nFavourite color: %2$s</string>
    <string name="random_toolbar_title">Random number example</string>
    <string name="request_toolbar_title">Example Request</string>
    <string name="fragment_example_username">Username</string>
    <string name="fragment_example_favourite_color">Your favourite color</string>
    <string name="fragment_example_login">Login</string>
    <string name="fragment_request_search">Search</string>
    <string name="fragment_request_post_id">Post id</string>
    <string name="fragment_request_invalid_input">Invalid input, please enter a valid id.</string>

    <!-- Login -->
    <string name="login_email_text">me@email.com</string>
    <string name="login_password_text">Password</string>
    <string name="login_text">LOG IN</string>
    <string name="signup_text">SIGN UP</string>
    <string name="terms">By joining you agree to our <u>Terms &amp; Conditions</u></string>
    <string name="woloxUrl">http://www.wolox.com.ar</string>

    <!-- Validation errors -->
    <string name="empty_email_error">Email must not be empty!</string>
    <string name="invalid_email_error">Invalid email address</string>
    <string name="empty_password_error">Password must not be empty!</string>
    <string name="internet_connection_error">No internet connection</string>
    <string name="login_credentials_error">Provided credentials are invalid</string>
    <string name="login_unknown_error">Unknown error</string>

    <!-- Dummy screens -->
    <string name="sign_up_fragment_text">Sign Up</string>
    <string name="hello_blank_fragment">Profile view</string>

    <!-- Home screen -->
    <string name="home_header_title">Wolox</string>
    <string name="home_news_tab_title">News</string>
    <string name="home_profile_tab_title">Profile</string>

    <!-- News tab -->
    <string name="news_title">Ali Connors</string>
    <string name="news_text">I\'ll be in your neighborhood doing errands ...</string>
    <string name="news_time_ago">15m</string>
    <string name="empty_news_error">No news to show :(</string>
    <string name="news_service_error">Error trying to connect to the service</string>

    <!-- New details -->
    <string name="new_details_failure">There was an error loading this new</string>

</resources>
