<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HomeNavigationBackground">

    <ImageView
        android:id="@+id/vWoloxLogoHome"
        android:layout_width="@dimen/home_header_width"
        android:layout_height="@dimen/home_header_height"
        android:src="@drawable/wolox_logo"
        android:layout_margin="@dimen/home_header_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="@dimen/home_header_width"
        android:layout_height="@dimen/home_header_height"
        android:layout_margin="@dimen/home_header_margin"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:text="@string/home_header_title"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/vWoloxLogoHome" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/vWoloxLogoHome"
        app:layout_constraintLeft_toRightOf="parent"
        app:tabSelectedTextColor="@color/colorAccent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="@dimen/home_tab_width"
            android:layout_height="@dimen/home_tab_height"
            android:icon="@drawable/ic_news_list_selector"
            android:text="@string/home_news_tab_title"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="@dimen/home_tab_width"
            android:layout_height="@dimen/home_tab_height"
            android:icon="@drawable/ic_profile_selector"
            android:text="@string/home_profile_tab_title"/>

    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
